base/laravel/laravel-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-worker
  labels:
    app: laravel-app
    role: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
      role: worker
  template:
    metadata:
      labels:
        app: laravel-app
        role: worker
    spec:
  
      containers:
        - name: laravel 
          image: laravel-application-local-image-v:latest
          imagePullPolicy: Never
          workingDir: /var/www # adjust if your app lives elsewhere

          command:
            - "php"
            - "/var/www/artisan"
            - "queue:work"
            - "--sleep=3"
            - "--tries=3"
            - "--timeout=60"
            - "--queue=default"
        
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          restartPolicy: Always
